--- a/FattaangOnlineShopping/Admin/AdminMaster.Master
+++ b/FattaangOnlineShopping/Admin/AdminMaster.Master
@@ -15,6 +15,11 @@
         
         </asp:ContentPlaceHolder>
     </div>--%>
+
+        <asp:ScriptManager ID="ScriptManager1" runat="server">
+        </asp:ScriptManager>
+        <asp:UpdatePanel ID="AdminUpdatePanel" runat="server">
+            <ContentTemplate>
         <table style="align-content: center; width: 900px;">
             <%--width:900px--%>
             <%--Header--%>
@@ -55,7 +60,7 @@
             <%--Menu--%>
             <tr>
                 <td>
-                    <table style="/*text-align: center;*/ border: thin ridge #808080; width: 900px">
+                    <table style="/*text-align: center; */ border: thin ridge #808080; width: 900px">
                         <tr>
                             <td class="style2">
                                 <a href="AddEditCategory.aspx">Category</a>
@@ -91,6 +96,8 @@
             </tr>
 
         </table>
+                </ContentTemplate>
+               </asp:UpdatePanel>
 
     </form>
 </body>
